--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1063,6 +1063,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getters and setters\n",
+    "\n",
+    "In many languages, it's either traditional or mandatory to define a set of methods that allow us to retrieve the value of an attribute or to set it.\n",
+    "\n",
+    "- The methods that retrieve values are known as \"accessors,\" but everyone calls them \"getters\"\n",
+    "- The methods that modify/update values are known as \"mutators,\" but everyone calls them \"setters\"\n",
+    "\n",
+    "We can write such methods in Python without much trouble."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
