--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1078,10 +1078,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, first_name, last_name, shoe_size):\n",
+    "        self.first_name = first_name     # take the value in the first_name parameter, and assign it to a new attribute on self\n",
+    "        self.last_name = last_name\n",
+    "        self.shoe_size = shoe_size\n",
+    "    def fullname(self):\n",
+    "        return f'{self.first_name} {self.last_name}'       \n",
+    "\n",
+    "    # getters\n",
+    "    def get_first_name(self):\n",
+    "        return self.first_name\n",
+    "    def get_last_name(self):\n",
+    "        return self.last_name\n",
+    "    def get_shoe_size(self):\n",
+    "        return self.shoe_size\n",
+    "\n",
+    "    # setters\n",
+    "    def set_first_name(self, new_first_name):\n",
+    "        self.first_name = new_first_name\n",
+    "    def set_last_name(self, new_last_name):\n",
+    "        self.last_name = new_last_name\n",
+    "    def set_shoe_size(self, new_shoe_size):\n",
+    "        self.shoe_size = new_shoe_size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p = Person('Reuven', 'Lerner', 46)\n",
+    "\n",
+    "print(p.get_first_name())\n",
+    "print(p.get_shoe_size())\n",
+    "\n",
+    "p.set_first_name('something else\n",
+    "p.set_shoe_size(48)\n"
+   ]
   }
  ],
  "metadata": {
