--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1109,17 +1109,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reuven\n",
+      "46\n",
+      "something else\n",
+      "48\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'first_name': 'something else', 'last_name': 'Lerner', 'shoe_size': 48}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p = Person('Reuven', 'Lerner', 46)\n",
     "\n",
     "print(p.get_first_name())\n",
     "print(p.get_shoe_size())\n",
     "\n",
-    "p.set_first_name('something else\n",
-    "p.set_shoe_size(48)\n"
+    "p.set_first_name('something else')\n",
+    "p.set_shoe_size(48)\n",
+    "\n",
+    "print(p.get_first_name())\n",
+    "print(p.get_shoe_size())\n",
+    "\n",
+    "vars(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This is not how we typically do things in Python!\n",
+    "\n",
+    "Yes, we *can* define getters and setters. But in most other languages, you also have permissions associated with attributes. That is, you indicate whether an attribute is \"public,\" \"protected,\" or \"private.\" These protections ensure that only the \"right\" parts of the program can retrieve or set values. In order to make sure that only appropriate parts of the program are retrieving/setting the right things, all access and updates are funneled through getter and setter methods.\n",
+    "\n",
+    "In Python, we don't have private or protected states. Everything is public! Anyone can retrieve any attribute they "
    ]
   }
  ],
