--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1156,7 +1156,75 @@
     "\n",
     "Yes, we *can* define getters and setters. But in most other languages, you also have permissions associated with attributes. That is, you indicate whether an attribute is \"public,\" \"protected,\" or \"private.\" These protections ensure that only the \"right\" parts of the program can retrieve or set values. In order to make sure that only appropriate parts of the program are retrieving/setting the right things, all access and updates are funneled through getter and setter methods.\n",
     "\n",
-    "In Python, we don't have private or protected states. Everything is public! Anyone can retrieve any attribute they "
+    "In Python, we don't have private or protected states. Everything is public! Anyone can retrieve any attribute they want. Anyone can *set* any attribute they want!\n",
+    "\n",
+    "For these reasons, we don't typically define getters and setters in Python. Rather:\n",
+    "\n",
+    "- To retrieve an attribute value, just retrieve it.\n",
+    "- To set an attribute value, just set it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reuven\n",
+      "46\n",
+      "something else\n",
+      "48\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'first_name': 'something else', 'last_name': 'Lerner', 'shoe_size': 48}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rewritten to avoid getters/setters\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, first_name, last_name, shoe_size):\n",
+    "        self.first_name = first_name     # take the value in the first_name parameter, and assign it to a new attribute on self\n",
+    "        self.last_name = last_name\n",
+    "        self.shoe_size = shoe_size\n",
+    "    def fullname(self):\n",
+    "        return f'{self.first_name} {self.last_name}'       \n",
+    "\n",
+    "p = Person('Reuven', 'Lerner', 46)\n",
+    "\n",
+    "print(p.first_name)\n",
+    "print(p.shoe_size)\n",
+    "\n",
+    "p.first_name = 'something else'\n",
+    "p.shoe_size = 48\n",
+    "\n",
+    "print(p.first_name)\n",
+    "print(p.shoe_size)\n",
+    "\n",
+    "vars(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's wrong with this?\n",
+    "\n",
+    "To most Python people, the answer is: Nothing! \n",
+    "\n",
+    "To people coming from other languages: Everything!\n",
+    "\n"
    ]
   }
  ],
