--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1224,7 +1224,12 @@
     "To most Python people, the answer is: Nothing! \n",
     "\n",
     "To people coming from other languages: Everything!\n",
-    "\n"
+    "\n",
+    "It is true that by allowing us to access and modify every attribute, we're breaking down some of the abstraction barriers and we are encouraging people to reach into our objects and potentially do dangerous things.\n",
+    "\n",
+    "\"We're all adults here.\" Once someone has access to a program, they can do pretty much whatever they want with it, even if things have been to be private/protected. Why put up the barriers, when they aren't permanent or impermeable? \n",
+    "\n",
+    "There are times when you might want setter-like functionality. For example, w"
    ]
   }
  ],
