--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1229,8 +1229,20 @@
     "\n",
     "\"We're all adults here.\" Once someone has access to a program, they can do pretty much whatever they want with it, even if things have been to be private/protected. Why put up the barriers, when they aren't permanent or impermeable? \n",
     "\n",
-    "There are times when you might want setter-like functionality. For example, w"
+    "There are times when you might want setter-like functionality. For example, what if someone sets a negative shoe size? Shouldn't we prevent that from happening?\n",
+    "\n",
+    "Python offers:\n",
+    "- Properties, which let us feel like we're working with data even though methods are being secretly run behind the scenes\n",
+    "- Descriptors, which are general-purpose properties\n",
+    "- Pydantic, which adds runtime checking of our values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
