--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1245,8 +1245,15 @@
     "\n",
     "1. Define a class, `Scoop`, which represents a scoop of ice cream. Each scoop has one attribute, the flavor (`flavor`). That attribute is set when the scoop is created.\n",
     "2. Define three instances of `Scoop`, each with a different flavor.\n",
-    "3. Define a list whose elements are the three instances of `Scoop`1 th"
+    "3. Define a list whose elements are the three instances of `Scoop` that you created. Iterate over that list, and print the `flavor` of each `Scoop` instance."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
