--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1277,11 +1277,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Ice cream bowl\n",
+    "\n",
+    "1. Define a class, `Bowl`, into which we can put one or more `Scoop` instances.\n",
+    "2. When we create an instance of `Bowl`, we won't pass any arguments. But in `__ini_"
+   ]
   }
  ],
  "metadata": {
