--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1283,8 +1283,18 @@
     "# Exercise: Ice cream bowl\n",
     "\n",
     "1. Define a class, `Bowl`, into which we can put one or more `Scoop` instances.\n",
-    "2. When we create an instance of `Bowl`, we won't pass any arguments. But in `__ini_"
+    "2. When we create an instance of `Bowl`, we won't pass any arguments. But in `__init__`, we do want to create an attribute on `self`, one called `scoops`, which will start as an empty list.\n",
+    "3. Define a method, `add_scoop`, which takes a `Scoop` instance as its argument, and adds the instance (not just its flavor!) to `self.scoops`.\n",
+    "4. Create a `Bowl` instance, and add three scoops to it, using `add_scoop` three times.\n",
+    "5. You should then have a bowl with three scoops in it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
