--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1294,7 +1294,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Bowl:\n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
