--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1291,9 +1291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'scoops': []}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Bowl:\n",
     "    def __init__(self):\n",
@@ -1301,7 +1312,122 @@
     "    def add_scoop(self, new_scoop):\n",
     "        self.scoops.append(new_scoop)\n",
     "\n",
-    "        "
+    "b = Bowl()\n",
+    "vars(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'scoops': [<__main__.Scoop at 0x1210c82f0>]}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.add_scoop(s1)\n",
+    "vars(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'scoops': [<__main__.Scoop at 0x1210c82f0>, <__main__.Scoop at 0x111243ed0>]}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.add_scoop(s2)\n",
+    "vars(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'scoops': [<__main__.Scoop at 0x1210c82f0>,\n",
+       "  <__main__.Scoop at 0x111243ed0>,\n",
+       "  <__main__.Scoop at 0x121166850>]}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.add_scoop(s3)\n",
+    "vars(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Scoop at 0x1210c82f0>,\n",
+       " <__main__.Scoop at 0x111243ed0>,\n",
+       " <__main__.Scoop at 0x121166850>]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.scoops   # we set the list to be the \"scoops\" attribute on b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chocolate\n",
+      "vanilla\n",
+      "coffee\n"
+     ]
+    }
+   ],
+   "source": [
+    "for one_scoop in b.scoops:\n",
+    "    print(one_scoop.flavor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each instance of `Bowl` has "
    ]
   }
  ],
