--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1427,8 +1427,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each instance of `Bowl` has "
+    "Each instance of `Bowl` has one or more instances of `Scoop` in its `scoops` attribute.\n",
+    "\n",
+    "This is known as \"composition\" of objects, where one contains another. This is totally normal! Our `Scoop` instance also uses composition; the value of `flavor` is a string.\n",
+    "\n",
+    "So `Bowl` contains one or more `Scoops`. Each `Scoop` has one `flavor`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
