--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1435,11 +1435,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. More methods to deal with scoops and bowls\n",
+    "2. "
+   ]
   }
  ],
  "metadata": {
