--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1441,8 +1441,15 @@
     "# Next up\n",
     "\n",
     "1. More methods to deal with scoops and bowls\n",
-    "2. "
+    "2. Methods and special parameters"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
