--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1446,6 +1446,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'scoops': [<__main__.Scoop at 0x1210ca660>,\n",
+       "  <__main__.Scoop at 0x121166e90>,\n",
+       "  <__main__.Scoop at 0x121166fd0>]}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "    \n",
+    "class Bowl:\n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "b = Bowl()\n",
+    "\n",
+    "b.add_scoop(s1)\n",
+    "b.add_scoop(s2)\n",
+    "b.add_scoop(s3)\n",
+    "\n",
+    "vars(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
