--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1477,7 +1477,13 @@
     "    def add_scoop(self, new_scoop):\n",
     "        self.scoops.append(new_scoop)\n",
     "\n",
-    "b = Bowl()\n",
+    "b = Bowl()   # this runs Bowl.__new__, which creates a new Bowl object\n",
+    "             # then we run Bowl.__init__\n",
+    "             # inside of Bowl.__init__, we have self, a variable referring to the new instance of Bowl\n",
+    "             # by saying self.scoops = [], we create a new attribute on self (the bowl instance), name is \"scoops\" value is []\n",
+    "             # if I were to say self = [], this would (a) replace the bowl instance with an empty list on self\n",
+    "             #   and (b) have zero effect on the new bowl itself, because we would be assigning to a local variable in our \n",
+    "             #   method.\n",
     "\n",
     "b.add_scoop(s1)\n",
     "b.add_scoop(s2)\n",
