--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1446,18 +1446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'scoops': [<__main__.Scoop at 0x1210ca660>,\n",
-       "  <__main__.Scoop at 0x121166e90>,\n",
-       "  <__main__.Scoop at 0x121166fd0>]}"
+       "{'scoops': [<__main__.Scoop at 0x1210ca900>,\n",
+       "  <__main__.Scoop at 0x121166ad0>,\n",
+       "  <__main__.Scoop at 0x121166990>]}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,11 +1512,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# What does `=` do in Python?\n",
+    "\n",
+    "1. Assign a value to a variable, as in `x = 5`\n",
+    "2. Assign a value to an attribute, as in `a.b = 10`\n",
+    "3. Modify an existing value, as in `mylist[2] = 123`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: `flavors`\n",
+    "\n",
+    "Add a new method, `flavors`, to the `Bowl` class. This method will return a list fo st"
+   ]
   }
  ],
  "metadata": {
