--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1528,8 +1528,17 @@
    "source": [
     "# Exercise: `flavors`\n",
     "\n",
-    "Add a new method, `flavors`, to the `Bowl` class. This method will return a list fo st"
+    "1. Add a new method, `flavors`, to the `Bowl` class. This method will return a list of strings, aka flavors.\n",
+    "2. If the `scoops` attribute on a bowl contains `Scoop` objects, we want the `flavor` value from each of them.\n",
+    "3. If I were to write `print(b.flavors())`, I would see `['chocolate', 'vanilla', 'coffee']`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
