--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1538,7 +1538,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "    \n",
+    "class Bowl:\n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "b = Bowl()   \n",
+    "b.add_scoop(s1)\n",
+    "b.add_scoop(s2)\n",
+    "b.add_scoop(s3)\n",
+    "\n",
+    "print(b.flavors"
+   ]
   }
  ],
  "metadata": {
