--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1535,9 +1535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n"
+     ]
+    }
+   ],
    "source": [
     "class Scoop:\n",
     "    def __init__(self, flavor):\n",
@@ -1552,14 +1560,28 @@
     "        self.scoops = []\n",
     "    def add_scoop(self, new_scoop):\n",
     "        self.scoops.append(new_scoop)\n",
+    "    def flavors(self):\n",
+    "        output = []\n",
+    "\n",
+    "        for one_scoop in self.scoops:\n",
+    "            output.append(one_scoop.flavor)\n",
+    "\n",
+    "        return output\n",
     "\n",
     "b = Bowl()   \n",
     "b.add_scoop(s1)\n",
     "b.add_scoop(s2)\n",
     "b.add_scoop(s3)\n",
     "\n",
-    "print(b.flavors"
+    "print(b.flavors())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
