--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1581,7 +1581,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Scoop.flavor   # this means: grab the attribute \"flavor\" from the class Scoop\n",
+    "\n",
+    "s1.flavor      # this means: grab the attribute \"flavor\" from the *instance* of Scoop called s1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classes are factories\n",
+    "\n",
+    "Our `Scoop` class creates new instances of `Scoop`. Our `Bowl` class creates new instances of `Bowl`. Similarly, `str` creates new strings, `int` creates new integers, etc.\n",
+    "\n",
+    "It's common to talk about classes as \"factories,\" or even \"factory objects.\"\n",
+    "\n",
+    "Thinking about things in this way allows you to understand whether an attribute should be on the instance or the class.\n",
+    "\n",
+    "Will an ice-cream factory have a flavor? No, because we don't eat an ice cream factory.\n",
+    "\n",
+    "But will an ice cream scoop have a flavor? Yes!"
+   ]
   }
  ],
  "metadata": {
