--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1603,6 +1603,69 @@
     "\n",
     "But will an ice cream scoop have a flavor? Yes!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Scoop' has no attribute 'flavor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[71]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mScoop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mflavor\u001b[49m\n",
+      "\u001b[31mAttributeError\u001b[39m: type object 'Scoop' has no attribute 'flavor'"
+     ]
+    }
+   ],
+   "source": [
+    "Scoop.flavor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternative solution\n",
+    "\n",
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "    \n",
+    "class Bowl:\n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        self.scoops.append(new_scoop)\n",
+    "    def flavors(self):\n",
+    "        # I have: A list of scoop objects in self.scoops\n",
+    "        # I want: A list of strings, the flavors from those scoops\n",
+    "        # I can map from the first to the second by \n",
+    "\n",
+    "        \n",
+    "        output = []\n",
+    "\n",
+    "        for one_scoop in self.scoops:\n",
+    "            output.append(one_scoop.flavor)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "b = Bowl()   \n",
+    "b.add_scoop(s1)\n",
+    "b.add_scoop(s2)\n",
+    "b.add_scoop(s3)\n",
+    "\n",
+    "print(b.flavors())"
+   ]
   }
  ],
  "metadata": {
