--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1627,9 +1627,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n"
+     ]
+    }
+   ],
    "source": [
     "# Alternative solution\n",
     "\n",
@@ -1649,15 +1657,12 @@
     "    def flavors(self):\n",
     "        # I have: A list of scoop objects in self.scoops\n",
     "        # I want: A list of strings, the flavors from those scoops\n",
-    "        # I can map from the first to the second by \n",
+    "        # I can map from the first to the second by retrieving .flavor on each scoop\n",
     "\n",
-    "        \n",
-    "        output = []\n",
-    "\n",
-    "        for one_scoop in self.scoops:\n",
-    "            output.append(one_scoop.flavor)\n",
-    "\n",
-    "        return output\n",
+    "        # this is a perfect place to use a *list comprehension!*\n",
+    "        # this list comprehension gives us a list of flavors, based on self.scoops\n",
+    "        return [one_scoop.flavor\n",
+    "                for one_scoop in self.scoops]\n",
     "\n",
     "b = Bowl()   \n",
     "b.add_scoop(s1)\n",
@@ -1666,6 +1671,13 @@
     "\n",
     "print(b.flavors())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
