--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1673,6 +1673,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Add multiple scoops\n",
+    "\n",
+    "1. We already have a method, `add_scoop`, that takes a single scoop and adds it to the list of scoops.\n",
+    "2. Add a second method, `add_scoops` (plural!) that takes a list of new scoops and adds each of them, one by one, to the \"scoops\" attribute.\n",
+    "\n",
+    "I should be able to say\n",
+    "\n",
+    "    b.add_scoops([s1, s2, s3])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
