--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1688,9 +1688,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n"
+     ]
+    }
+   ],
    "source": [
     "class Scoop:\n",
     "    def __init__(self, flavor):\n",
@@ -1703,8 +1711,14 @@
     "class Bowl:\n",
     "    def __init__(self):\n",
     "        self.scoops = []\n",
+    "\n",
     "    def add_scoop(self, new_scoop):\n",
     "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "    def add_scoops(self, new_scoops):\n",
+    "        for one_scoop in new_scoops:    # iterate over the list of scoops\n",
+    "            self.add_scoop(one_scoop)   # invoke self.add_scoop for each one, one at a time\n",
+    "\n",
     "    def flavors(self):\n",
     "        output = []\n",
     "\n",
@@ -1714,12 +1728,16 @@
     "        return output\n",
     "\n",
     "b = Bowl()   \n",
-    "b.add_scoop(s1)\n",
-    "b.add_scoop(s2)\n",
-    "b.add_scoop(s3)\n",
-    "\n",
+    "b.add_scoops([s1, s2, s3])\n",
     "print(b.flavors())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
