--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1688,14 +1688,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chocolate', 'vanilla', 'coffee']\n"
+      "['chocolate', 'vanilla', 'coffee']\n",
+      "['coffee', 'vanilla', 'chocolate']\n"
      ]
     }
    ],
@@ -1729,15 +1730,18 @@
     "\n",
     "b = Bowl()   \n",
     "b.add_scoops([s1, s2, s3])\n",
-    "print(b.flavors())"
+    "list_of_flavors = b.flavors()\n",
+    "\n",
+    "print(list_of_flavors)     # print forwards\n",
+    "print(list_of_flavors[::-1])  # print backwards"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Why do I have to invoke"
+   ]
   }
  ],
  "metadata": {
