--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1740,7 +1740,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why do I have to invoke"
+    "Why do I have to invoke `add_scoops` with a list of scoops?\n",
+    "\n",
+    "Why not just invoke the method with the scoops, outside of a list?\n",
+    "\n",
+    "    b.add_scoops(s1, s2, s3)\n",
+    "\n",
+    "In order for that to work, our method would need to take 1, 2, 3, 4, or any number of scoops as arguments.   \n",
+    "\n",
+    "Python allows us to do that with a special kind of parameter. It is typically written as `*args` (pronounced \"splat args\"). The `*` is mandatory, to say that the parameter will be a tuple containing all of the positional arguments that no other parameter grabbed. The name, however, can be anything you want."
    ]
   }
  ],
