--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1802,11 +1802,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# When we call a method...\n",
+    "\n",
+    "You might have noticed that we're invoking methods on instances, even though they're defined on classes. This is true, we define methods in the class body, but we (typically) invoke a method on an instance.\n",
+    "\n",
+    "Actually, we can invoke the method on the class, too -- on condition that the first argument is the instance!\n",
+    "\n",
+    "That is: Python rewrites our method calls."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = 'abcd'\n",
+    "\n",
+    "s.upper"
+   ]
   }
  ],
  "metadata": {
