--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1901,11 +1901,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Tomorrow\n",
+    "\n",
+    "1. Magic methods (hooks into Python's capabilities by writing specially named methods)\n",
+    "2. Class attributes\n",
+    "3. Attribute lookup (ICPO rule)\n",
+    "4. Inheritance\n",
+    "    - Three paradigms of inheritance\n",
+    "    - Attribute inheritance -- what it means\n"
+   ]
   }
  ],
  "metadata": {
