--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agenda, day 2"
+    "# Agenda, day 2\n",
+    "\n",
+    "1. Recap and Q&A\n",
+    "2. Magic methods / \"dunder\" methods\n",
+    "3. Class attributes\n",
+    "4. Finding attributes with ICPO\n",
+    "5. Inheritance -- what it is, and how ICPO influences it\n",
+    "6. Three models for method inheritance\n",
+    "7. Data inheritance\n",
+    "8. What next?"
    ]
   },
   {
