--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -43,7 +43,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Person(_"
+    "class Person:\n",
+    "    def __init__(self, name, shoe_size):\n",
+    "        self.name = name\n",
+    "        self.shoe_size = shoe_size\n",
+    "        self.bank_balance = 0   # attribute that I set, with a default/starter value, without any connection to a parameter\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}!'  # if I just say \"name\", and not \"self.name\", then Python will not find my attribute"
    ]
   }
  ],
