--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -193,8 +193,15 @@
     "1. Define a `Cellphone` class. Each instance will have two attributes:\n",
     "    - `number`\n",
     "    - `model`\n",
-    "2. You should be able to invoke the `call` method on an instance of `Cellphone. It"
+    "2. You should be able to invoke the `call` method on an instance of `Cellphone. It'll return a string saying, \"Calling\" and then print the number that is calling. You'll have to provide an argument, the number to call."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
