--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -198,17 +198,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Phone 12345 is calling 2468'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Cellphone:\n",
     "    def __init__(self, number, model):\n",
     "        self.number = number\n",
     "        self.model = model\n",
     "\n",
+    "    def call(self, other_number):\n",
+    "        return f'Phone {self.number} is calling {other_number}'\n",
+    "\n",
     "c1 = Cellphone(12345, 'iPhone')\n",
-    "c2 = Cellphone(67890, 'Android')"
+    "c2 = Cellphone(67890, 'Android')\n",
+    "\n",
+    "c1.call(2468)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c2.call(c"
    ]
   },
   {
